@@ -1,24 +1,22 @@
-package com.kwk.httpclient;
+package com.kwk.crypt;
 
 import com.google.common.base.Charsets;
-import org.apache.commons.codec.binary.Hex;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import java.io.IOException;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
 
-public class CryptUtil {
+public class Des {
+    private final static Logger logger = LoggerFactory.getLogger(Des.class);
+
     private final static String DES = "DES";
 
     private final static String DES_ALG = "DES/ECB/PKCS5Padding";
-
-    private final static String KEY_MD5 = "MD5";
 
     private final static char[] hexDigits = {'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
             'a', 'b', 'c', 'd', 'e', 'f'};
@@ -33,8 +31,8 @@ public class CryptUtil {
      */
     public static String encrypt(String data, String key) throws Exception {
         byte[] bt = encrypt(data.getBytes(Charsets.UTF_8), key.getBytes(Charsets.UTF_8));
-        String strs = new BASE64Encoder().encode(bt);
-        return strs;
+        String tmpStr = new String(Base64.encodeBase64(bt), Charsets.UTF_8);
+        return tmpStr;
     }
 
     /**
@@ -48,22 +46,18 @@ public class CryptUtil {
      */
     public static String decrypt(String data, String key) throws IOException,
             Exception {
-        if (data == null)
+        if (data == null) {
             return null;
-        BASE64Decoder decoder = new BASE64Decoder();
-        byte[] buf = decoder.decodeBuffer(data);
+        }
+
+        byte[] buf = Base64.decodeBase64(data.getBytes(Charsets.UTF_8));
         byte[] bt = decrypt(buf, key.getBytes(Charsets.UTF_8));
         return new String(bt, Charsets.UTF_8);
     }
 
-    public static String md5(String input) throws NoSuchAlgorithmException {
-        byte[] buf = input.getBytes(Charsets.UTF_8);
-        MessageDigest md5 = MessageDigest.getInstance(KEY_MD5);
-        md5.update(buf);
-        byte[] outBuf = md5.digest();
-        char[] str = Hex.encodeHex(outBuf);
-        return new String(str);
-    }
+
+
+
 
     /**
      * Description 根据键值进行加密
